<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mis Lugares</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo">MIS LUGARES</string>
    <string name="accion_mostrar_lugares">Mostrar Lugares</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_acerca_de">Acerca de</string>
    <string name="accion_salir">Salir</string>

</resources>
